# mycroft

./: CMakeLists.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/modules/: CMakeLists.txt  ThreatLevel.c  ThreatLevel.h
src/mycroft/: CMakeLists.txt  mycroft.c
